update index file

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <input
           type="email"
           placeholder="Your email address..."
-          class="email mb-3"
+          class="email mb-3 mb-md-0"
           id="email"
         />
         <p class="error-msg text-center d-none" id="error-msg">
